--- a/GeneratorQR/Olympia/templates/homepage.html
+++ b/GeneratorQR/Olympia/templates/homepage.html
@@ -1,122 +1,25 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <h1>Hello!</h1>
 
-{% block body %}
+    <p>choose your preferred language</p>
+    <a href="en/">english</a><br>
+    <a href="by/">беларуская</a>
+    <!--<label for="poll">please choose your preferred language:</label><br>
 
-        <div style="position: static; scroll-behavior: smooth" class="home">
-            <h1 class="h1_welcome" id="welcome">Welcome to QR Code Machine!</h1>
-            <h1 class="h1_home" id="home">Create your QR Code!</h1>
-            <form class="form_home" action="/" method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
+    <form method="POST">
+        {% csrf_token %}
+        <input type="radio" id="EN" name="language" value="EN">
+        <label for="EN">EN</label><br>
 
-                <label for="qrdata">Put data you want to code here:</label><br>
-                    <!--<div id="qrdata" name="qrdata" contentEditable="true"></div>-->
-                    <textarea rows="10" cols="35" type="text" id="qrdata" name="qrdata"></textarea><br>
-                <label for="qrdata">Enter the name of the file to save your code in:</label><br>
-                    <!--<div id="filename" name="filename" contentEditable="true"></div>-->
-                    <textarea rows="2" cols="20" type="text" id="filename"
-                              name="filename" value="{{filename}}"></textarea><br>
-                <!-- Poll file format -->
-                <label for="poll">Choose file format for your code</label><br>
+        <input type="radio" id="BY" name="language" value="BY">
+        <label for="BY">BY</label><br>
 
-                <input type="radio" id="jpg" name="fileFormat" value=".jpg">
-                <label for="jpg">.jpg</label><br>
+        <input type="submit" value="Confirm" />
+    </form>-->
+</head>
 
-                <input type="radio" id="png" name="fileFormat" value=".png">
-                <label for="png">.png</label><br>
+<body>
 
-                <input type="radio" id="webp" name="fileFormat" value=".webp">
-                <label for="webp">.webp</label><br>
-
-                <!-- Poll error correction -->
-                <label for="poll">Choose an error correction level</label><br>
-                <input type="radio" id="L" name="EC" value="L">
-                    <label for="L"> L (7%)</label><br>
-
-                <input type="radio" id="M" name="EC" value="M">
-                    <label for="M"> M (15%)</label><br>
-
-                <input type="radio" id="Q" name="EC" value="Q">
-                    <label for="Q"> Q (25%)</label><br>
-
-                <input type="radio" id="H" name="EC" value="H">
-                    <label for="H"> H (30%)</label><br>
-
-                <!-- Color Playground -->
-                <label for="poll">You can play with colors of your code here (DEMO)</label><br>
-                <label for="poll">Here choose the color for the pattern (default is black)</label><br>
-
-                <input type="radio" id="green" name="color" value="green">
-                    <label for="green"> Green</label><br>
-
-                <input type="radio" id="blue" name="color" value="light-blue">
-                    <label for="blue"> Blue</label><br>
-
-                <input type="radio" id="orange" name="color" value="orange">
-                    <label for="orange"> Orange</label><br>
-
-                <input type="radio" id="purple" name="color" value="purple">
-                    <label for="purple"> Purple</label><br>
-
-                <input type="radio" id="red" name="color" value="red">
-                    <label for="red"> Red</label><br>
-
-                <!-- Background Color Playground -->
-                <label for="poll">Here choose the color for the background (default is white)</label><br>
-
-                <input type="radio" id="bg-green" name="bg-color" value="green">
-                    <label for="bg-green"> Green</label><br>
-
-                <input type="radio" id="bg-blue" name="bg-color" value="blue">
-                    <label for="bg-blue"> Blue</label><br>
-
-                <input type="radio" id="bg-orange" name="bg-color" value="orange">
-                    <label for="bg-orange"> Orange</label><br>
-
-                <input type="radio" id="bg-purple" name="bg-color" value="purple">
-                    <label for="bg-purple"> Purple</label><br>
-
-                <input type="radio" id="bg-red" name="bg-color" value="red">
-                    <label for="bg-red"> Red</label><br>
-                <input id="submit" onclick="myFunction()" type="submit" class="genBtn"
-                       value="Generate" />
-
-                {% if huge_code_check %}
-
-                <p class="p_click">your qr code is too big for this page<br>download it by clicking this icon</p>
-                <p class="p_qr_icon"><a href="{{code1}}" download="{{name}}"><img
-                        class="img_qr_icon" src="../static/media/qr_code_icon.png"></a></p>
-
-                {% elif data_check %}
-
-                <p class="p_click">download your code by clicking on it!</p>
-                <p class="img_code1"><a href={{code1}} download="{{name}}"><img src="{{code1}}"></a></p>
-                    <!--<a href={{code1}} download="{{name}}" class="downloadBtn"
-                    type="download">Download</a>-->
-
-                {% else %}
-
-                <h1 class="h1_code_example">Code example:</h1>
-                <img class="default_qr_img" src="../static/codes/Hello.jpg">
-
-                {% endif %}
-            </form>
-
-            <h1 class="h1_about" id="about">Something about our project</h1>
-
-            <p class="p_about">The goal
-                of the QR machine<br> is to provide you just a convenient easy-to-use<br> ad-free website
-                to create qr codes<br> <br>=)</p>
-
-            <img src="">
-
-            <center><h1 class="h1_contacts" id="contacts">You can contact me</h1></center>
-
-            <p class="p_github"><a href="https://github.com/moonahod/GeneratorQR" target="_blank">
-                <img class="img_github" src="../static/media/github_for_link.png"></a></p>
-
-            <p class="p_mailto"><a href="mailto:funfan733@gmail.com">
-                <img class="img_mailto" src="../static/media/super_email_360x360.png"></a></p>
-
-        </div>
-
-{% endblock %}
+</body>
