--- a/GeneratorQR/Olympia/static/style.css
+++ b/GeneratorQR/Olympia/static/style.css
@@ -61,7 +61,7 @@ body, html {
 /*too many styles later on*/
 
 .h1_welcome {
-    margin-top: 28px;
+    margin-top: 57px;
     text-align: center;
     text-decoration: underline overline;
     z-index: 1;
@@ -69,13 +69,13 @@ body, html {
 
 
 .h1_home {
-    margin-top: 55px;
+    margin-top: 34px;
     margin-left: 80px;
     z-index:1;
 }
 
 .form_home {
-    margin-top: 55px;
+    margin-top: 34px;
     margin-left: 80px;
     z-index:1;
 }
@@ -83,6 +83,34 @@ body, html {
 /*text arii */
 textarea {
   field-sizing: content;
+}
+
+.input_base, select {
+  width: 134px;
+  padding: 11px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.input_extended {
+    width: 250px;
+    height: 80px;
+    padding: 11px 20px;
+}
+
+.input_filename {
+    width: 160px;
+    height: 26px;
+    padding: 1px 2px;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+}
+
+.select_many {
+    overflow:auto;
 }
 
 /*.qrdata {
@@ -100,34 +128,34 @@ textarea {
 }*/
 
 .p_click {
-    margin-top: -803px;
+    margin-top: -600px;
     margin-left: 485px;
     text-align: center;
 }
 
 .img_code1 {
-    margin-top: 15px;
-    margin-left: 660px;
+    margin-top: 25px;
+    margin-left: 630px;
     z-index:1;
 }
 
 .h1_code_example {
     position: absolute;
     top: 110px;
-    left: 730px;
+    right: 100px;
     z-index:1;
 }
 
 .default_qr_img {
     position: absolute;
     top: 178px;
-    left: 730px;
+    right: 100px;
     z-index:1;
 }
 
 .h1_about {
     text-align: center;
-    margin-top: 510px;
+    margin-top: 300px;
     z-index:1
 }
 
@@ -146,7 +174,7 @@ textarea {
 .p_github {
     position: absolute;
     margin-top: 14px;
-    margin-left: 490px;
+    margin-left: 420px;
     z-index:1;
 }
 
@@ -179,6 +207,36 @@ textarea {
     width: 40%;
 }
 /*End of too many styles*/
+
+/* Top navigation bar for desktop only */
+.topnav {
+    position: fixed;
+    height: 47px;
+    width: 100%;
+    background-color: #36393e;
+    z-index: 2;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 19px 32px;
+    text-decoration: none;
+    font-size: 19px;
+}
+
+.topnav a:hover {
+    padding: 19px 32px;
+    background-color: #819c35;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #819c35;
+    color: white;
+}
+/* end of topnav stuff */
 
 /*All stuff connected with sidebar menu and
 hamburger menu button*/
@@ -310,7 +368,7 @@ a {
 /*End of the main buttons*/
 
 /*Classes that should be changed when using the site on mobile*/
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 900px) {
     .home {
         h1 {
             font-size: 28px;
@@ -321,6 +379,30 @@ a {
     width: 100%;
     height: 1900px;
     }
+
+    /* language chooser */
+
+    .lang-container {
+    margin: auto;
+    text-align: center;
+    margin-top: 60px;
+    width: 310px;
+    background-color: #1c1d22;
+    border-radius: 20px;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    .hello {
+        color: #f2eddf;
+        font-size: 30px;
+        text-align: center;
+    }
+    p {
+        color: #f2eddf;
+    }
+    a {
+        color: #f2eddf;
+    }
+}
 
     /*too many styles later on*/
 
@@ -488,3 +570,156 @@ a {
         left: 0;
     }
     /*End of sidebar and hamburger stuff*/
+}
+
+/*here @media is used not to display sidebar when on desktop */
+@media only screen and (min-width:900px) {
+    /*All stuff connected with sidebar menu and
+    hamburger menu button*/
+    #sidebar ul li {
+        display: none;/* only for mobile/tablet */
+    }
+
+    #sidebar {
+        display: none;/* only for mobile/tablet */
+    }
+
+    .container .bar1,
+    .container .bar2,
+    .container .bar3 {
+        display: none;/* only for mobile/tablet */
+    }
+
+    #sidebar .container {
+        display: none;/* only for mobile/tablet */
+    }
+/*End of sidebar and hamburger stuff*/
+}
+
+@media only screen and (min-width:1px) and (max-width:899px) {
+    /* Top navigation bar for desktop only */
+    .topnav {
+        display: none;/* it will be displayed only on desktop */
+    }
+
+    .topnav a {
+        display: none;/* it will be displayed only on desktop */
+    }
+
+    .topnav a:hover {
+        display: none;/* it will be displayed only on desktop */
+    }
+
+    .topnav a.active {
+        display: none;/* it will be displayed only on desktop */
+    }
+/* end of topnav stuff */
+}
+
+/* later on @media is used only for positioning 2 image links */
+@media only screen and (min-width:515px) and (max-width:600px) {
+
+    .p_github {
+        margin-top: 13px;
+        margin-left: 120px;
+    }
+
+    .img_github {
+        height: 27%;
+        width: 27%;
+    }
+
+    .p_mailto {
+        margin-top: 13px;
+        margin-left: 280px;
+    }
+
+    .img_mailto {
+        height: 30%;
+        width: 30%;
+    }
+}
+
+@media only screen and (min-width:600px) and (max-width:670px) {
+
+    .p_github {
+        margin-top: 13px;
+        margin-left: 140px;
+    }
+
+    .img_github {
+        height: 25%;
+        width: 25%;
+    }
+
+    .p_mailto {
+        margin-top: 13px;
+        margin-left: 310px;
+    }
+
+    .img_mailto {
+        height: 28%;
+        width: 28%;
+    }
+}
+
+@media only screen and (min-width:670px) and (max-width:800px) {
+
+    .p_github {
+        margin-top: 13px;
+        margin-left: 190px;
+    }
+
+    .img_github {
+        height: 25%;
+        width: 25%;
+    }
+
+    .p_mailto {
+        margin-top: 13px;
+        margin-left: 380px;
+    }
+
+    .img_mailto {
+        height: 25%;
+        width: 25%;
+    }
+}
+
+@media only screen and (min-width:800px) and (max-width:900px) {
+
+    .p_github {
+        margin-top: 13px;
+        margin-left: 230px;
+    }
+
+    .p_mailto {
+        margin-top: 13px;
+        margin-left: 440px;
+    }
+}
+
+@media only screen and (min-width:900px) and (max-width:1000px) {
+
+    .p_github {
+        margin-top: 13px;
+        margin-left: 240px;
+    }
+
+    .p_mailto {
+        margin-top: 13px;
+        margin-left: 440px;
+    }
+}
+
+@media only screen and (min-width:1000px) and (max-width:1050px) {
+    .p_github {
+        margin-top: 13px;
+        margin-left: 290px;
+    }
+
+    .p_mailto {
+        margin-top: 13px;
+        margin-left: 490px;
+    }
+}
